Fix T40980: Exporting animation in MPEG Matroska using ffv1 and FLAC codecs fails